--- a/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
+++ b/fpga/vivado/cwhusky.runs/impl_1/cwhusky_top.ltx
@@ -479,52 +479,14 @@
                                 "id": 16,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": true,
+                                "isVector": false,
                                 "leftIndex": 0,
-                                "rightIndex": 11,
+                                "rightIndex": 0,
                                 "portIndex": 1,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/adc_datain",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[11]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[10]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[9]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[8]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[7]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/adc_datain[0]"
-                                            }
-                                        ]
+                                        "name": "oadc/U_fifo/fast_fifo_wr",
+                                        "isBus": false
                                     }
                                 ]
                             },
@@ -539,7 +501,7 @@
                                 "portIndex": 2,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_wr",
+                                        "name": "oadc/U_fifo/fast_fifo_rd",
                                         "isBus": false
                                     }
                                 ]
@@ -549,26 +511,10 @@
                                 "id": 18,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 3,
-                                "nets": [
-                                    {
-                                        "name": "oadc/U_fifo/fast_fifo_rd",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe4",
-                                "id": 19,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
                                 "isVector": true,
                                 "leftIndex": 0,
                                 "rightIndex": 11,
-                                "portIndex": 4,
+                                "portIndex": 3,
                                 "nets": [
                                     {
                                         "name": "oadc/U_fifo/fast_fifo_dout",
@@ -615,6 +561,22 @@
                                 ]
                             },
                             {
+                                "name": "probe4",
+                                "id": 19,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 4,
+                                "nets": [
+                                    {
+                                        "name": "oadc/U_fifo/fast_fifo_full",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
                                 "name": "probe5",
                                 "id": 20,
                                 "type": "DATA_TRIGGER",
@@ -625,7 +587,7 @@
                                 "portIndex": 5,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_full",
+                                        "name": "oadc/U_fifo/fast_fifo_empty",
                                         "isBus": false
                                     }
                                 ]
@@ -641,7 +603,7 @@
                                 "portIndex": 6,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_empty",
+                                        "name": "oadc/U_fifo/fast_fifo_overflow_1",
                                         "isBus": false
                                     }
                                 ]
@@ -657,7 +619,7 @@
                                 "portIndex": 7,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_overflow",
+                                        "name": "oadc/U_fifo/fast_fifo_underflow_1",
                                         "isBus": false
                                     }
                                 ]
@@ -673,7 +635,7 @@
                                 "portIndex": 8,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_underflow",
+                                        "name": "oadc/U_fifo/adc_capture_go",
                                         "isBus": false
                                     }
                                 ]
@@ -689,7 +651,7 @@
                                 "portIndex": 9,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/downsample_wr_en",
+                                        "name": "oadc/U_fifo/adc_capture_stop",
                                         "isBus": false
                                     }
                                 ]
@@ -705,7 +667,7 @@
                                 "portIndex": 10,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fast_fifo_read_mode_1",
+                                        "name": "oadc/U_fifo/state_idle",
                                         "isBus": false
                                     }
                                 ]
@@ -721,7 +683,7 @@
                                 "portIndex": 11,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/stream_segment_available_1",
+                                        "name": "oadc/U_fifo/state_presamp_filling",
                                         "isBus": false
                                     }
                                 ]
@@ -737,7 +699,7 @@
                                 "portIndex": 12,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/reset_done_1",
+                                        "name": "oadc/U_fifo/state_presamp_full",
                                         "isBus": false
                                     }
                                 ]
@@ -753,7 +715,7 @@
                                 "portIndex": 13,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fifo_rst_start_r",
+                                        "name": "oadc/U_fifo/state_triggered",
                                         "isBus": false
                                     }
                                 ]
@@ -763,320 +725,171 @@
                                 "id": 29,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": true,
+                                "isVector": false,
                                 "leftIndex": 0,
-                                "rightIndex": 6,
+                                "rightIndex": 0,
                                 "portIndex": 14,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/reset_hi_count",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_hi_count[0]"
-                                            }
-                                        ]
+                                        "name": "oadc/U_fifo/state_done",
+                                        "isBus": false
                                     }
                                 ]
-                            },
+                            }
+                        ]
+                    },
+                    {
+                        "type": "ILA_V3",
+                        "name": "oadc/U_fifo/U_ila_long_fifo",
+                        "spec": "labtools_ila_v6",
+                        "ipName": "ila",
+                        "core_location": {
+                            "user_chain": 1,
+                            "slave_index": 2,
+                            "bscan_switch_index": 0
+                        },
+                        "uuid": "941DFBE407FB5C16A0669052B8359D16",
+                        "pins": [
                             {
-                                "name": "probe15",
+                                "name": "probe0",
                                 "id": 30,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": true,
+                                "isVector": false,
                                 "leftIndex": 0,
-                                "rightIndex": 9,
-                                "portIndex": 15,
+                                "rightIndex": 0,
+                                "portIndex": 0,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/reset_lo_count",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[9]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[8]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[7]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/reset_lo_count[0]"
-                                            }
-                                        ]
+                                        "name": "oadc/U_fifo/slow_fifo_wr_1",
+                                        "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe16",
+                                "name": "probe1",
                                 "id": 31,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 16,
+                                "portIndex": 1,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/fifo_rst_1",
+                                        "name": "oadc/U_fifo/slow_fifo_rd_1",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe17",
+                                "name": "probe2",
                                 "id": 32,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 17,
+                                "portIndex": 2,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/adc_capture_go",
+                                        "name": "oadc/U_fifo/slow_fifo_full_1",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe18",
+                                "name": "probe3",
                                 "id": 33,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 18,
+                                "portIndex": 3,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/adc_capture_stop",
+                                        "name": "oadc/U_fifo/slow_fifo_empty_1",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe19",
+                                "name": "probe4",
                                 "id": 34,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": true,
+                                "isVector": false,
                                 "leftIndex": 0,
-                                "rightIndex": 11,
-                                "portIndex": 19,
+                                "rightIndex": 0,
+                                "portIndex": 4,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/presample_counter",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[11]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[10]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[9]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[8]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[7]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/presample_counter[0]"
-                                            }
-                                        ]
+                                        "name": "oadc/U_fifo/slow_fifo_overflow_1",
+                                        "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe20",
+                                "name": "probe5",
                                 "id": 35,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": true,
+                                "isVector": false,
                                 "leftIndex": 0,
-                                "rightIndex": 11,
-                                "portIndex": 20,
+                                "rightIndex": 0,
+                                "portIndex": 5,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/sample_counter",
-                                        "isBus": true,
-                                        "subnets": [
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[11]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[10]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[9]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[8]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[7]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[6]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[5]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[4]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[3]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[2]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[1]"
-                                            },
-                                            {
-                                                "name": "oadc/U_fifo/sample_counter[0]"
-                                            }
-                                        ]
+                                        "name": "oadc/U_fifo/slow_fifo_underflow_1",
+                                        "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe21",
+                                "name": "probe6",
                                 "id": 36,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 21,
+                                "portIndex": 6,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/state_idle",
+                                        "name": "oadc/U_fifo/stream_segment_available_1",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe22",
+                                "name": "probe7",
                                 "id": 37,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 22,
+                                "portIndex": 7,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/state_presamp_filling",
+                                        "name": "oadc/U_fifo/fast_fifo_overflow",
                                         "isBus": false
                                     }
                                 ]
                             },
                             {
-                                "name": "probe23",
+                                "name": "probe8",
                                 "id": 38,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
                                 "leftIndex": 0,
                                 "rightIndex": 0,
-                                "portIndex": 23,
+                                "portIndex": 8,
                                 "nets": [
                                     {
-                                        "name": "oadc/U_fifo/state_presamp_full",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe24",
-                                "id": 39,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 24,
-                                "nets": [
-                                    {
-                                        "name": "oadc/U_fifo/state_triggered",
-                                        "isBus": false
-                                    }
-                                ]
-                            },
-                            {
-                                "name": "probe25",
-                                "id": 40,
-                                "type": "DATA_TRIGGER",
-                                "direction": "IN",
-                                "isVector": false,
-                                "leftIndex": 0,
-                                "rightIndex": 0,
-                                "portIndex": 25,
-                                "nets": [
-                                    {
-                                        "name": "oadc/U_fifo/state_done",
+                                        "name": "oadc/U_fifo/fast_fifo_underflow",
                                         "isBus": false
                                     }
                                 ]
@@ -1090,14 +903,14 @@
                         "ipName": "ila",
                         "core_location": {
                             "user_chain": 1,
-                            "slave_index": 2,
+                            "slave_index": 3,
                             "bscan_switch_index": 0
                         },
                         "uuid": "191367044E705964B9613360323B4B60",
                         "pins": [
                             {
                                 "name": "probe0",
-                                "id": 41,
+                                "id": 39,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1108,13 +921,13 @@
                                     {
                                         "name": "oadc/U_fifo/reset",
                                         "isBus": false,
-                                        "parentNetId": 140
+                                        "parentNetId": 90
                                     }
                                 ]
                             },
                             {
                                 "name": "probe1",
-                                "id": 42,
+                                "id": 40,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1240,7 +1053,7 @@
                             },
                             {
                                 "name": "probe2",
-                                "id": 43,
+                                "id": 41,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1256,7 +1069,7 @@
                             },
                             {
                                 "name": "probe3",
-                                "id": 44,
+                                "id": 42,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1272,7 +1085,7 @@
                             },
                             {
                                 "name": "probe4",
-                                "id": 45,
+                                "id": 43,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1398,7 +1211,7 @@
                             },
                             {
                                 "name": "probe5",
-                                "id": 46,
+                                "id": 44,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1414,7 +1227,7 @@
                             },
                             {
                                 "name": "probe6",
-                                "id": 47,
+                                "id": 45,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1430,7 +1243,7 @@
                             },
                             {
                                 "name": "probe7",
-                                "id": 48,
+                                "id": 46,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1446,7 +1259,7 @@
                             },
                             {
                                 "name": "probe8",
-                                "id": 49,
+                                "id": 47,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1462,7 +1275,7 @@
                             },
                             {
                                 "name": "probe9",
-                                "id": 50,
+                                "id": 48,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1478,7 +1291,7 @@
                             },
                             {
                                 "name": "probe10",
-                                "id": 51,
+                                "id": 49,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1494,7 +1307,7 @@
                             },
                             {
                                 "name": "probe11",
-                                "id": 52,
+                                "id": 50,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1510,7 +1323,7 @@
                             },
                             {
                                 "name": "probe12",
-                                "id": 53,
+                                "id": 51,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1526,7 +1339,7 @@
                             },
                             {
                                 "name": "probe13",
-                                "id": 54,
+                                "id": 52,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -1556,7 +1369,7 @@
                             },
                             {
                                 "name": "probe14",
-                                "id": 55,
+                                "id": 53,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1572,7 +1385,7 @@
                             },
                             {
                                 "name": "probe15",
-                                "id": 56,
+                                "id": 54,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -1626,7 +1439,7 @@
                         ]
                     },
                     {
-                        "id": 140,
+                        "id": 90,
                         "name": "oadc/U_reg_openadc/SR[0]",
                         "state_reg": [
                             {
